--- a/basic/web/css/site.css
+++ b/basic/web/css/site.css
@@ -9,8 +9,8 @@ body {
     border-top: 1px solid #ddd;
     padding-top: 20px; hasta aca desde arriba es la config vieja
     position: bottom; left: 0; right: 0; bottom: 0; agregue esta y la saqué*/
-    clear: both;
-    position: bottom;
+    clear: both; /*estos valores funcionaron bien 11/6*/
+    position: auto;
     padding-top: 10px;
     background-color: #f5f5f5;
     z-index: 10;
